corpus/apply.txt
==================
Hello[]
==================

Hello[]

---

(source_file
  (apply
    (builtin_symbol)
    (apply_bracket_begin)
    (apply_bracket_end)))

==================
Hello [ ]
==================

Hello [ ]

---

(source_file
  (apply
    (builtin_symbol)
    (apply_bracket_begin)
    (apply_bracket_end)))

==================
Hello [\n]
==================

Hello [
]

---

(source_file
  (apply
    (builtin_symbol)
    (apply_bracket_begin)
    (apply_bracket_end)))

==================
Hello [\n  \n]
==================

Hello [
  
]

---

(source_file
  (apply
    (builtin_symbol)
    (apply_bracket_begin)
    (apply_bracket_end)))

==================
   Hello [  \n  \n  ]
==================

  Hello [  
  
  ]

---

(source_file
  (apply
    (builtin_symbol)
    (apply_bracket_begin)
    (apply_bracket_end)))

==================
Hello (* *)[(* *)]
==================

Hello (* *)[(* *)]

---

(source_file
  (apply
    (builtin_symbol)
    (comment)
    (apply_bracket_begin)
    (comment)
    (apply_bracket_end)))

==================
a @@ b @@ c ===== a @@ (b @@ c)
==================

a @@ b @@ c

---

(source_file
  (apply_atat_top
    (user_symbol)
    (apply_atat_operator)
    (apply_atat_top
      (user_symbol)
      (apply_atat_operator)
      (user_symbol))))

==================
a @@@ b @@@ c ===== a @@@ (b @@@ c)
==================

a @@@ b @@@ c

---

(source_file
  (apply_atatat_top
    (user_symbol)
    (apply_atatat_operator)
    (apply_atatat_top
      (user_symbol)
      (apply_atatat_operator)
      (user_symbol))))

==================
a @@ b @@@ c @@ d ===== a @@ (b @@@ (c @@ d))
==================

a @@ b @@@ c @@ d

---

(source_file
  (apply_atat_top
    (user_symbol)
    (apply_atat_operator)
    (apply_atatat_top
      (user_symbol)
      (apply_atatat_operator)
      (apply_atat_top
        (user_symbol)
        (apply_atat_operator)
        (user_symbol)))))
