corpus/plus_positive.txt
==================
+b
==================

+b

---

(source_file
  (positive_top
    (positive_operator)
    (user_symbol)))

==================
a+b
==================

a+b

---

(source_file
  (plus_top
    (user_symbol)
    (plus_operator)
    (user_symbol)))

==================
{a+b}
==================

{a+b}

---

(source_file
  (list
    (list_bracket_begin)
    (plus
      (user_symbol)
      (plus_operator)
      (user_symbol))
    (list_bracket_end)))

==================
+a+b
==================

+a+b

---

(source_file
  (plus_top
    (positive_top
      (positive_operator)
      (user_symbol))
    (plus_operator)
    (user_symbol)))

==================
-a+b
==================

-a+b

---

(source_file
  (plus_top
    (negative_top
      (negative_operator)
      (user_symbol))
    (plus_operator)
    (user_symbol)))
